--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
    
     <title>React App</title>
   </head>
-  <body>
+  <body class="h-screen w-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="h-screen w-screen" id="root"></div>
     
   </body>
 </html>
