Build stay tuned page

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="WotSong is a music quizzing game that integrates seamlessly with
+      Spotify and ChromeCast. Develop quizzes based on your Spotify
+      playlists and play with your friends."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>WotSong: Be Fast or Be Last</title>
   </head>
   <body class="h-screen w-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
